# HDR-SMood-Challenge-sample

./: README.md  pyproject.toml  requirements.txt  training_config.json
.github/workflows/: README.md  process_training.yml
baselines/submissions/BioClip2/: model.py
baselines/submissions/BioClip2-ft/: model.py
baselines/submissions/BioClip2-ft-did/: model.py
baselines/submissions/Dino2/: model.py  requirements.txt
baselines/training/BioClip2/: evaluation.py  model.py  train.py
baselines/training/BioClip2-ft-did/: train.py
notebooks/: train-data-exploration.ipynb
